--- a/src/assets/style/cmps/shift/_UpdateShiftHeader.scss
+++ b/src/assets/style/cmps/shift/_UpdateShiftHeader.scss
@@ -1,4 +1,10 @@
 .update-shift-header {
+
+  h4 {
+    color: $text-clr;
+    font-weight: 500;
+  }
+
   .tabs {
     max-width: 265px;
     max-height: 31px;
